packages/imagproc/lib/ImagProc/Ipp/Adapt.hs


foreign import ccall "adapt.h ippiFilterSobelHoriz_32f_C1Rx"
    ippiFilterSobelHoriz_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiFilterSobelHoriz_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiFilterSobelHoriz_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiFilterLaplace_32f_C1Rx"
    ippiFilterLaplace_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiFilterLaplace_32f_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterLaplace_32f_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "adapt.h ippiFilterGauss_8u_C1Rx"
    ippiFilterGauss_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiFilterGauss_8u_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterGauss_8u_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "adapt.h ippiFilterGauss_32f_C1Rx"
    ippiFilterGauss_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiFilterGauss_32f_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterGauss_32f_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "adapt.h ippiFilterHipass_8u_C1Rx"
    ippiFilterHipass_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiFilterHipass_8u_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterHipass_8u_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "adapt.h ippiFilter_8u_C1Rx"
    ippiFilter_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr Int32 -> Ptr IppiSize -> Ptr IppiPoint -> Int -> IO Int
ippiFilter_8u_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize anchor divisor = do
    pdstRoiSize <- new dstRoiSize
    pkernelSize <- new kernelSize
    panchor <- new anchor
    r <- ippiFilter_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel pkernelSize panchor divisor
    free pdstRoiSize
    free pkernelSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilter_32f_C1Rx"
    ippiFilter_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr IppiSize -> Ptr IppiPoint -> IO Int
ippiFilter_32f_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pkernelSize <- new kernelSize
    panchor <- new anchor
    r <- ippiFilter_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel pkernelSize panchor
    free pdstRoiSize
    free pkernelSize
    free panchor
    return r

foreign import ccall "adapt.h ippiFilterColumn_8u_C1Rx"
    ippiFilterColumn_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr Int32 -> Int -> Int -> Int -> IO Int
ippiFilterColumn_8u_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize yAnchor divisor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterColumn_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize yAnchor divisor
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiFilterColumn_32f_C1Rx"
    ippiFilterColumn_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> Int -> IO Int
ippiFilterColumn_32f_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize yAnchor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterColumn_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize yAnchor
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiFilterRow_8u_C1Rx"
    ippiFilterRow_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr Int32 -> Int -> Int -> Int -> IO Int
ippiFilterRow_8u_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize xAnchor divisor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterRow_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize xAnchor divisor
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiFilterRow_32f_C1Rx"
    ippiFilterRow_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> Int -> IO Int
ippiFilterRow_32f_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize xAnchor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterRow_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize xAnchor
    free pdstRoiSize
    return r

foreign import ccall "adapt.h ippiThreshold_Val_8u_C1Rx"
    ippiThreshold_Val_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> CUChar -> CUChar -> CInt -> IO Int
ippiThreshold_Val_8u_C1R pSrc srcStep pDst dstStep roiSize threshold value ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiThreshold_Val_8u_C1Rx pSrc srcStep pDst dstStep proiSize threshold value ippCmpOp
    free proiSize
    return r

foreign import ccall "adapt.h ippiThreshold_Val_32f_C1Rx"
    ippiThreshold_Val_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> CInt -> IO Int
ippiThreshold_Val_32f_C1R pSrc srcStep pDst dstStep roiSize threshold value ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiThreshold_Val_32f_C1Rx pSrc srcStep pDst dstStep proiSize threshold value ippCmpOp
    free proiSize
    return r

foreign import ccall "adapt.h ippiComputeThreshold_Otsu_8u_C1Rx"
    ippiComputeThreshold_Otsu_8u_C1Rx :: Ptr CUChar -> Int -> Ptr IppiSize -> Ptr CUChar -> IO Int
ippiComputeThreshold_Otsu_8u_C1R pSrc srcStep roiSize pThreshold = do
    proiSize <- new roiSize
    r <- ippiComputeThreshold_Otsu_8u_C1Rx pSrc srcStep proiSize pThreshold
    free proiSize
    return r

foreign import ccall "adapt.h ippiCopy_8u_C3C1Rx"
    ippiCopy_8u_C3C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiCopy_8u_C3C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C3C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCopy_8u_C1C3Rx"
    ippiCopy_8u_C1C3Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiCopy_8u_C1C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C1C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCopy_8u_C1Rx"
    ippiCopy_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiCopy_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCopy_8u_C3Rx"
    ippiCopy_8u_C3Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiCopy_8u_C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCopy_8u_C1MRx"
    ippiCopy_8u_C1MRx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Ptr CUChar -> Int -> IO Int
ippiCopy_8u_C1MR pSrc srcStep pDst dstStep roiSize pMask maskStep = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C1MRx pSrc srcStep pDst dstStep proiSize pMask maskStep
    free proiSize
    return r

foreign import ccall "adapt.h ippiCopy_32f_C1Rx"
    ippiCopy_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiCopy_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCopy_32f_C1MRx"
    ippiCopy_32f_C1MRx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr CUChar -> Int -> IO Int
ippiCopy_32f_C1MR pSrc srcStep pDst dstStep roiSize pMask maskStep = do
    proiSize <- new roiSize
    r <- ippiCopy_32f_C1MRx pSrc srcStep pDst dstStep proiSize pMask maskStep
    free proiSize
    return r

foreign import ccall "adapt.h ippiSet_8u_C1Rx"
    ippiSet_8u_C1Rx :: CUChar -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiSet_8u_C1R value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSet_8u_C1Rx value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiSet_8u_C3Rx"
    ippiSet_8u_C3Rx :: Ptr CUChar -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiSet_8u_C3R value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSet_8u_C3Rx value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiSet_32f_C1Rx"
    ippiSet_32f_C1Rx :: Float -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiSet_32f_C1R value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSet_32f_C1Rx value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiImageJaehne_32f_C1Rx"
    ippiImageJaehne_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiImageJaehne_32f_C1R pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiImageJaehne_32f_C1Rx pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiScale_8u32f_C1Rx"
    ippiScale_8u32f_C1Rx :: Ptr CUChar -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> IO Int
ippiScale_8u32f_C1R pSrc srcStep pDst dstStep roiSize vMin vMax = do
    proiSize <- new roiSize
    r <- ippiScale_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize vMin vMax
    free proiSize
    return r

foreign import ccall "adapt.h ippiScale_32f8u_C1Rx"
    ippiScale_32f8u_C1Rx :: Ptr Float -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Float -> Float -> IO Int
ippiScale_32f8u_C1R pSrc srcStep pDst dstStep roiSize vMin vMax = do
    proiSize <- new roiSize
    r <- ippiScale_32f8u_C1Rx pSrc srcStep pDst dstStep proiSize vMin vMax
    free proiSize
    return r

foreign import ccall "adapt.h ippiMaxIndx_8u_C1Rx"
    ippiMaxIndx_8u_C1Rx :: Ptr CUChar -> Int -> Ptr IppiSize -> Ptr CUChar -> Ptr CInt -> Ptr CInt -> IO Int
ippiMaxIndx_8u_C1R pSrc srcStep roiSize pMax pIndexX pIndexY = do
    proiSize <- new roiSize
    r <- ippiMaxIndx_8u_C1Rx pSrc srcStep proiSize pMax pIndexX pIndexY
    free proiSize
    return r

foreign import ccall "adapt.h ippiMaxIndx_32f_C1Rx"
    ippiMaxIndx_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr CInt -> Ptr CInt -> IO Int
ippiMaxIndx_32f_C1R pSrc srcStep roiSize pMax pIndexX pIndexY = do
    proiSize <- new roiSize
    r <- ippiMaxIndx_32f_C1Rx pSrc srcStep proiSize pMax pIndexX pIndexY
    free proiSize
    return r

foreign import ccall "adapt.h ippiMinMax_32f_C1Rx"
    ippiMinMax_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr Float -> IO Int
ippiMinMax_32f_C1R pSrc srcStep roiSize pMin pMax = do
    proiSize <- new roiSize
    r <- ippiMinMax_32f_C1Rx pSrc srcStep proiSize pMin pMax
    free proiSize
    return r

foreign import ccall "adapt.h ippiMaxEvery_8u_C1IRx"
    ippiMaxEvery_8u_C1IRx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiMaxEvery_8u_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMaxEvery_8u_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiMinEvery_8u_C1IRx"
    ippiMinEvery_8u_C1IRx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiMinEvery_8u_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMinEvery_8u_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r
